[package]
name = "sd8viz-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = "0.32.0"
geojson = "1.0.0"
mvt = "0.12.0"
pmtiles = "0.21.0"
reqwest = "0.13.2"
shapefile = "0.8.0"
yup-oauth2 = { version = "12.1.2", features = ["service-account"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
serde_json = "1.0.149"
tokio = "1.50.0"
anyhow = "1.0.102"
hyper-util = "0.1.20"
hyper-rustls = "0.27.7"
google-cloud-auth = "1.8.0"
google-cloud-secretmanager-v1 = "1.7.0"
tower-service = "0.3.3"
google-cloud-gax = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
csv = "1.4.0"
urlencoding = "2.1.3"
strum_macros = "0.28.0"
itertools = "0.14.0"
log = "0.4.29"
env_logger = "0.11.10"

[dev-dependencies]
test-log = "0.2.20"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-test = "0.2.6"
wiremock = "0.6"
